--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^29.1.2",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.2.4"
   }
 }
